traefik/dev/ingressroute-patch-forward-auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: forward-auth
spec:
  routes:
    - match: Host(`auth.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: forward-auth-tls
spec:
  routes:
    - match: Host(`auth.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: traefik-forward-auth
